--- a/src/components/molecules/Login.css
+++ b/src/components/molecules/Login.css
@@ -1,29 +1,35 @@
-#LoginPage{
-  justify-content:  space-around;
-  text-align: center;
-  display: flex;
-  background: linear-gradient(116.82deg, #EBFF00 0%, #00FF47 100%);
-  height:100vh;
-  align-items: center;
-	flex-wrap: nowrap;
+#LoginPage {
+    justify-content: space-around;
+    text-align: center;
+    display: flex;
+    background: linear-gradient(116.82deg, #EBFF00 0%, #00FF47 100%);
+    height: 100vh;
+    align-items: center;
+    flex-wrap: nowrap;
 }
-#Logo{
-	background-image: url('../../img/logo.png');
-	width: 200px;
-	height: 200px;
+
+#Logo {
+    background-image: url('../../img/logo.png');
+    background-blend-mode: multiply;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 200px;
+    height: 200px;
 }
-#LoginCard{
-  border-radius: 10px;
-  background-color: white;
-  width: auto;
-  height: auto;
-  justify-content: center;
-  font-size: 10px;
-  display: flex;
-  align-items:center;
-  align-content: center;
+
+#LoginCard {
+    border-radius: 10px;
+    background-color: white;
+    width: auto;
+    height: auto;
+    justify-content: center;
+    font-size: 10px;
+    display: flex;
+    align-items: center;
+    align-content: center;
 }
-#LogoAndText{
-	display: flex;
-	flex-wrap: nowrap;
+
+#LogoAndText {
+    display: flex;
+    flex-wrap: nowrap;
 }
