--- a/src/components/molecules/Login.css
+++ b/src/components/molecules/Login.css
@@ -9,8 +9,11 @@
 }
 #Logo{
 	background-image: url('../../img/logo.png');
-	width: 200px;
-	height: 200px;
+	width: 126px;
+	height: 152px;
+	background-repeat: no-repeat;
+	background-size:126px 152px;
+  margin-right:10px;
 }
 #LoginCard{
   border-radius: 10px;
@@ -26,4 +29,29 @@
 #LogoAndText{
 	display: flex;
 	flex-wrap: nowrap;
+  font-size: 40px;
+}
+#Vseobuch{
+	vertical-align: middle;
+  text-align: left;
+  color: #18AB00;
+  text-shadow: 0px 2.59496px 6.91988px rgba(0, 0, 0, 0.25);
+  width: 420.38px;
+  font-weight: 600;
+}
+#LoginButton{
+  background: #EBFF00;
+  box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  width: 90%;
+  height: 5%;
+  margin-top: 3%;
+  border: 0px;
+  color:black;
+}
+h2{
+  font-size: 34px;
+}
+p{
+  margin-bottom: 0px;
 }
