--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,9 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+
+* {
+    margin: 0;
+}
+
+.form-control:focus {
+    box-shadow: none !important;
+}
