--- a/src/components/molecules/Main.css
+++ b/src/components/molecules/Main.css
@@ -2,6 +2,7 @@
     background-color: #FBFFF2;
     display: flex;
     justify-content: center;
+    
 }
 .CourseDescription{
     display: flex;
@@ -10,19 +11,23 @@
     position: absolute;
     width: 1240px;
     height: 500px;
-    left: 100px;
-    top: 253px;
+    height: 100vh;
 
 }
 #Img{
-    height: 500px;
+    height: 450px;
     width: 600px;
     background-image: url("../../img/course.jpg");
+    background-repeat: no-repeat;
+    background-size: 600px 450px;
     border: 0;
     border-radius: 25px;
 
 }
 .Text{
+    align-content: center;
+    height: auto;
+    margin-left: 40px;
     font-family: Noto Sans;
     font-style: normal;
     font-weight: normal;
@@ -32,7 +37,25 @@
     font-size: 50px;
 }
 #Description{
+    margin-top: 20px;
     font-size: 30px;
-    line-height: 41px;
+    line-height: 40px;
+    color: #424242;
+}
+#Next{
+    background-color:#EBFF00;
+    position: relative;
+    height: 50px;
+    width: 50%;
+    left: 0%;
+    bottom: 0%;
+    
+    background: #EBFF00;
+    box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
+    border: 0;
+    border-radius: 10px;
+    margin-top: 2%;
+}
+#Next:hover{
     color: #424242;
 }
