--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,17 +1,10 @@
 .footer {
-    position: relative;
-    width: 1440px;
+    width: 100%;
     height: 120px;
-    background: linear-gradient(90.4deg, rgba(189, 255, 0, 0.2) 0%, rgba(143, 242, 0, 0.2) 56.25%, rgba(51, 215, 0, 0.2) 99.99%, rgba(29, 208, 0, 0.2) 100%);
+    align-items: center;
 }
 
 .f1 {
-    position: absolute;
-    width: 500px;
-    height: 69px;
-    left: 40px;
-    top: 25px;
-    font-family: Source Sans Pro;
     font-style: normal;
     font-weight: 300;
     font-size: 20px;
@@ -25,12 +18,6 @@
 }
 
 .f2 {
-    position: absolute;
-    width: 291px;
-    height: 69px;
-    left: 786px;
-    top: 25px;
-    font-family: Source Sans Pro;
     font-style: normal;
     font-weight: 600;
     font-size: 32px;
@@ -45,12 +32,6 @@
 }
 
 .f3 {
-    position: absolute;
-    width: 191px;
-    height: 85px;
-    left: 1149px;
-    top: 17px;
-    font-family: Source Sans Pro;
     font-style: normal;
     font-weight: 600;
     font-size: 32px;
