--- a/src/components/molecules/Main.css
+++ b/src/components/molecules/Main.css
@@ -9,7 +9,6 @@
     align-items: center;
     position: absolute;
     width: 1240px;
-    height: 500px;
     height: 100vh;
 
 }
@@ -41,19 +40,15 @@
     line-height: 40px;
     color: #424242;
 }
+.a {
+    width: 50px;
+}
 #Next{
-    background-color:#EBFF00;
-    position: relative;
-    height: 50px;
-    width: 50%;
-    left: 0%;
-    bottom: 0%;
-
+    font-size: 24px !important;
     background: #EBFF00;
-    box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
-    border: 0;
-    border-radius: 10px;
-    margin-top: 2%;
+    border-radius: 6px;
+    width: 332px;
+    line-height: 48px !important;
 }
 #Next:hover{
     color: #424242;
