--- a/src/components/molecules/Main.css
+++ b/src/components/molecules/Main.css
@@ -46,16 +46,12 @@
 }
 #Next{
     position: relative;
-    height: 50px;
-    width: 50%;
-    left: 0;
-    bottom: 0;
-
+    width: 332px;
+    line-height: 48px;
+    font-size: 22px;
     background: #EBFF00;
     box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
-    border: 0;
-    border-radius: 10px;
-    margin-top: 2%;
+    border-radius: 6px;
 }
 
 #Next:hover {
