--- a/src/components/molecules/Main/Main.css
+++ b/src/components/molecules/Main/Main.css
@@ -17,7 +17,7 @@
 #Img{
     height: 450px;
     width: 600px;
-    background-image: url("../../img/course.jpg");
+    background-image: url("../../../img/course.jpg");
     background-repeat: no-repeat;
     background-size: 600px 450px;
     border: 0;
