--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,10 @@
 .footer {
     width: 100%;
     height: 120px;
-    align-items: center;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: space-between !important;
+    background: linear-gradient(90.4deg, rgba(189, 255, 0, 0.2) 0%, rgba(143, 242, 0, 0.2) 56.25%, rgba(51, 215, 0, 0.2) 99.99%, rgba(29, 208, 0, 0.2) 100%);
 }
 
 .f1 {
@@ -43,4 +46,10 @@
     letter-spacing: -0.025em;
     font-feature-settings: 'pnum' on, 'lnum' on;
     color: #18AB00;
+}
+
+.row {
+    display: flex !important;
+    justify-content: space-between !important;
+    height: fit-content !important;
 }
