--- a/src/components/molecules/Main.css
+++ b/src/components/molecules/Main.css
@@ -1,18 +1,21 @@
 .Main {
     background: #E5E5E5;
-    display: flex;
+    /*display: flex;*/
     justify-content: center;
-
+    width: 100%;
+    height: 100% !important;
+}
+.fot {
+    top: calc(100vh - 120px);
 }
 
 .CourseDescription {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    position: absolute;
-    width: 1240px;
+    width: 100%;
     height: calc(100vh - 100px);
-    margin-top: 100px;
+    top: 100px;
 }
 
 #Img {
