--- a/src/components/molecules/Course.css
+++ b/src/components/molecules/Course.css
@@ -4,7 +4,7 @@
 .pro-item-content{
     white-space: normal !important;
 }
-nav{
+.pro-menu{
     background:#fbffd4 !important;
     color: black !important;
 }
