--- a/src/components/molecules/Header/Header.css
+++ b/src/components/molecules/Header/Header.css
@@ -1,8 +1,8 @@
 .img {
     background-image: url("../../../img/logo.png");
-    width: 63px;
-    height: 76px;
-    background-size: 63px auto;
+    width: 3vw;
+    height: 10vh;
+    background-size: 3vw auto;
     position: relative;
     display: flex;
 }
@@ -11,8 +11,8 @@
     font-family: Source Sans Pro, sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 36px;
-    line-height: 34px;
+    font-size: 22px;
+    line-height: 20px;
     /* or 96% */
 
     display: flex;
@@ -28,7 +28,7 @@
     font-family: Source Sans Pro, sans-serif;
     font-style: normal;
     font-weight: 400;
-    line-height: 34px;
+    font-size: 20px;
     /* or 108% */
     margin-left: 15% !important;
     width: fit-content !important;
@@ -47,10 +47,9 @@
     flex-direction: row;
     justify-content: space-between !important;
     align-items: center;
-    padding: 1%;
     margin: auto;
     width: 100%;
-    height: 100px !important;
+    height: fit-content !important;
     font: 26px "Source Sans Pro, sans-serif";
     color: #18AB00 !important;
     background: linear-gradient(90.4deg, rgba(189, 255, 0, 0.74) 0%, rgba(143, 242, 0, 0.74) 56.25%, rgba(51, 215, 0, 0.74) 99.99%, rgba(29, 208, 0, 0.74) 100%);
