--- a/src/components/molecules/Main/Main.css
+++ b/src/components/molecules/Main/Main.css
@@ -1,29 +1,30 @@
 .Main {
+    position: relative;
     background: #E5E5E5;
     display: flex;
-    justify-content: center;
-
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .CourseDescription {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    position: absolute;
-    width: 1240px;
-    height: calc(100vh - 100px);
-    margin-top: 100px;
+    position: relative;
+    width: 81vw;
+    height: calc(100vh - 102px);
 }
 
 #Img {
     height: 450px;
     width: 600px;
-    background-image: url("../../img/course.jpg");
+    background-image: url("../../../img/course.jpg");
     background-repeat: no-repeat;
     background-size: 600px 450px;
     border: 0;
     border-radius: 25px;
-
 }
 .Text{
     align-content: center;
