--- a/src/components/molecules/Info/Info.css
+++ b/src/components/molecules/Info/Info.css
@@ -6,10 +6,10 @@
     margin-right: 15vw;
 }
 
-p {
+.cont {
     margin-top: 10vh;
     margin-bottom: 2vh;
-    font-size: 26px;
+    font-size: 26px !important;
 }
 
 #upText {
